editing, cleaner, not finished

--- a/Boltz1.ipynb
+++ b/Boltz1.ipynb
@@ -223,7 +223,6 @@
         "#    print(f\"{header}\\n{sequence}\\n\")\n"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "AcYvVeDESi2a"
       },
       "execution_count": null,
@@ -244,7 +243,7 @@
           "height": 73
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -451,64 +450,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
-      "metadata": {
-        "cellView": "form",
-        "id": "4eXNO1JJHYrB",
-        "outputId": "7b7c61fe-a6f5-4ba6-a39b-ed245b3ca5f9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "CPU times: user 535 µs, sys: 0 ns, total: 535 µs\n",
-            "Wall time: 544 µs\n"
-          ]
-        }
-      ],
-      "source": [
-        "#@title Install dependencies\n",
-        "%%time\n",
-        "import os\n",
-        "if not os.path.isfile(\"COLABFOLD_READY\"):\n",
-        "  print(\"installing colabfold...\")\n",
-        "  os.system(\"pip install -q --no-warn-conflicts 'colabfold[alphafold-minus-jax] @ git+https://github.com/sokrypton/ColabFold'\")\n",
-        "  if os.environ.get('TPU_NAME', False) != False:\n",
-        "    os.system(\"pip uninstall -y jax jaxlib\")\n",
-        "    os.system(\"pip install --no-warn-conflicts --upgrade dm-haiku==0.0.10 'jax[cuda12_pip]'==0.3.25 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\")\n",
-        "  os.system(\"ln -s /usr/local/lib/python3.*/dist-packages/colabfold colabfold\")\n",
-        "  os.system(\"ln -s /usr/local/lib/python3.*/dist-packages/alphafold alphafold\")\n",
-        "  os.system(\"touch COLABFOLD_READY\")\n",
-        "\n",
-        "if not os.path.isfile(\"BOLZ_READY\"):\n",
-        "  os.system(\"apt-get install -y aria2\")\n",
-        "  os.system(\"pip install -q --no-warn-conflicts boltz\")\n",
-        "  os.system(\"mkdir weights\")\n",
-        "  os.system(\"aria2c -d weights -x8 -s8 https://colabfold.steineggerlab.workers.dev/boltz1.ckpt\")\n",
-        "  os.system(\"aria2c -d weights -x8 -s8 https://colabfold.steineggerlab.workers.dev/ccd.pkl\")\n",
-        "  os.system(\"touch BOLZ_READY\")"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "mkdir -p /content/boltz/examples/"
       ],
       "metadata": {
         "id": "KvZorwHFch7e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import shutil\n",
-        "shutil.move(\"prot_ptp1b_test1.yaml\", \"/content/boltz/examples/prot_ptp1b_test1.yaml\")"
+        ""
       ],
       "metadata": {
         "id": "fRYqZhVWcrDd",
@@ -518,7 +473,7 @@
           "height": 35
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -547,7 +502,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +563,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,8 +578,28 @@
     {
       "cell_type": "code",
       "source": [
-        "!zip -r /content/ptp1b_results.zip /content/boltz_results_prot_ptp1b_test/\n",
-        "\n"
+        "import shutil\n",
+        "import os\n",
+        "from google.colab import files\n",
+        "\n",
+        "# Define the results directory (adjust if needed)\n",
+        "results_dir = \"/content/boltz_results_prot_ptp1b_test\"\n",
+        "\n",
+        "# Define the output zip file name\n",
+        "zip_filename = \"boltz_results.zip\"\n",
+        "zip_path = f\"/content/{zip_filename}\"\n",
+        "\n",
+        "# Check if results directory exists\n",
+        "if os.path.exists(results_dir):\n",
+        "    # Zip the results directory\n",
+        "    shutil.make_archive(zip_path.replace(\".zip\", \"\"), 'zip', results_dir)\n",
+        "    print(f\"✅ Results zipped to {zip_path}\")\n",
+        "\n",
+        "    # Download the zip file\n",
+        "    files.download(zip_path)\n",
+        "    print(\"📥 Download started...\")\n",
+        "else:\n",
+        "    print(\"❌ No results found! Check if Boltz-1 ran successfully.\")\n"
       ],
       "metadata": {
         "id": "TVqmVLqbgpWZ",
@@ -633,7 +608,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +778,7 @@
           "height": 1000
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +843,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -959,7 +934,7 @@
           "height": 1000
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1296,6 +1271,334 @@
       "metadata": {
         "cellView": "form",
         "id": "jdSBSTOpaULF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AUTOMATED VERSION STARTS HERE:"
+      ],
+      "metadata": {
+        "id": "e39oLbw1qFcI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Cleaned up code:"
+      ],
+      "metadata": {
+        "id": "epw39LpSp62j"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "4eXNO1JJHYrB",
+        "outputId": "789d3866-8675-4788-bb0d-f609d70e6b90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "installing colabfold...\n"
+          ]
+        }
+      ],
+      "source": [
+        "#@title Install dependencies\n",
+        "%%time\n",
+        "import os\n",
+        "if not os.path.isfile(\"COLABFOLD_READY\"):\n",
+        "  print(\"installing colabfold...\")\n",
+        "  os.system(\"pip install -q --no-warn-conflicts 'colabfold[alphafold-minus-jax] @ git+https://github.com/sokrypton/ColabFold'\")\n",
+        "  if os.environ.get('TPU_NAME', False) != False:\n",
+        "    os.system(\"pip uninstall -y jax jaxlib\")\n",
+        "    os.system(\"pip install --no-warn-conflicts --upgrade dm-haiku==0.0.10 'jax[cuda12_pip]'==0.3.25 -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\")\n",
+        "  os.system(\"ln -s /usr/local/lib/python3.*/dist-packages/colabfold colabfold\")\n",
+        "  os.system(\"ln -s /usr/local/lib/python3.*/dist-packages/alphafold alphafold\")\n",
+        "  os.system(\"touch COLABFOLD_READY\")\n",
+        "\n",
+        "if not os.path.isfile(\"BOLZ_READY\"):\n",
+        "  os.system(\"apt-get install -y aria2\")\n",
+        "  os.system(\"pip install -q --no-warn-conflicts boltz\")\n",
+        "  os.system(\"mkdir weights\")\n",
+        "  os.system(\"aria2c -d weights -x8 -s8 https://colabfold.steineggerlab.workers.dev/boltz1.ckpt\")\n",
+        "  os.system(\"aria2c -d weights -x8 -s8 https://colabfold.steineggerlab.workers.dev/ccd.pkl\")\n",
+        "  os.system(\"touch BOLZ_READY\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This uploads the YAML, moves it to the \"examples\" folder, and runs Boltz-1 automatically."
+      ],
+      "metadata": {
+        "id": "9jJA9DXRrATR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil\n",
+        "import os\n",
+        "from google.colab import files\n",
+        "\n",
+        "# Create examples directory\n",
+        "os.makedirs(\"/content/boltz/examples/\", exist_ok=True)\n",
+        "\n",
+        "# Upload YAML file\n",
+        "uploaded = files.upload()\n",
+        "filename = list(uploaded.keys())[0]\n",
+        "dest_path = f\"/content/boltz/examples/{filename}\"\n",
+        "\n",
+        "# Move file to the examples folder\n",
+        "shutil.move(filename, dest_path)\n",
+        "print(f\"✅ Moved {filename} to {dest_path}\")\n",
+        "\n",
+        "# Run Boltz-1 prediction\n",
+        "!boltz predict {dest_path} --accelerator gpu --use_msa_server"
+      ],
+      "metadata": {
+        "id": "QiW_8qlWq-ai"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Download to ZIP"
+      ],
+      "metadata": {
+        "id": "t-UEuQkVraFI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shutil\n",
+        "import os\n",
+        "from google.colab import files\n",
+        "\n",
+        "# Define results directory and zip file name\n",
+        "results_dir = \"/content/boltz_results\"\n",
+        "zip_filename = \"boltz_results.zip\"\n",
+        "zip_path = f\"/content/{zip_filename}\"\n",
+        "\n",
+        "# Check if results directory exists\n",
+        "if os.path.exists(results_dir):\n",
+        "    shutil.make_archive(zip_path.replace(\".zip\", \"\"), 'zip', results_dir)\n",
+        "    print(f\"✅ Results zipped to {zip_path}\")\n",
+        "\n",
+        "    # Download the zip file\n",
+        "    files.download(zip_path)\n",
+        "    print(\"📥 Download started...\")\n",
+        "else:\n",
+        "    print(\"❌ No results found! Check if Boltz-1 ran successfully.\")\n"
+      ],
+      "metadata": {
+        "id": "KJtXXxGtrKfo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Choose which result you are analyzing"
+      ],
+      "metadata": {
+        "id": "fF9zHeIJtXXe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "\n",
+        "# Define results directory\n",
+        "results_path = \"/content/boltz_results\"\n",
+        "\n",
+        "# List available prediction folders\n",
+        "prediction_dirs = [d for d in os.listdir(results_path) if os.path.isdir(os.path.join(results_path, d))]\n",
+        "\n",
+        "if not prediction_dirs:\n",
+        "    print(\"❌ No prediction results found. Please run Boltz-1 first.\")\n",
+        "else:\n",
+        "    print(\"📂 Available Predictions:\")\n",
+        "    for i, pred_dir in enumerate(prediction_dirs):\n",
+        "        print(f\"{i + 1}. {pred_dir}\")\n",
+        "\n",
+        "    # Let the user choose a prediction\n",
+        "    choice = input(\"\\nEnter the number of the prediction you want to analyze: \")\n",
+        "\n",
+        "    try:\n",
+        "        choice_index = int(choice) - 1\n",
+        "        if choice_index < 0 or choice_index >= len(prediction_dirs):\n",
+        "            raise ValueError(\"Invalid selection.\")\n",
+        "\n",
+        "        selected_pred = prediction_dirs[choice_index]\n",
+        "        confidence_file = f\"{results_path}/{selected_pred}/predictions/{selected_pred}/confidence_{selected_pred}_model_0.json\"\n",
+        "\n",
+        "        with open(confidence_file, \"r\") as f:\n",
+        "            data = json.load(f)\n",
+        "            print(f\"\\n📊 Confidence Scores for {selected_pred}:\")\n",
+        "            print(json.dumps(data, indent=4))\n",
+        "\n",
+        "        # Load and plot pLDDT scores\n",
+        "        plddt_file = f\"{results_path}/{selected_pred}/predictions/{selected_pred}/plddt_{selected_pred}_model_0.npz\"\n",
+        "        plddt = np.load(plddt_file)[\"plddt\"]\n",
+        "\n",
+        "        plt.figure(figsize=(10, 5))\n",
+        "        plt.plot(plddt, label=f\"pLDDT Scores - {selected_pred}\", color=\"blue\")\n",
+        "        plt.xlabel(\"Residue Index\")\n",
+        "        plt.ylabel(\"pLDDT Score\")\n",
+        "        plt.title(f\"Boltz-1 pLDDT Score for {selected_pred}\")\n",
+        "        plt.legend()\n",
+        "        plt.show()\n",
+        "\n",
+        "    except (ValueError, FileNotFoundError) as e:\n",
+        "        print(f\"❌ Error: {e}. Please check the available predictions and try again.\")\n"
+      ],
+      "metadata": {
+        "id": "kuUQ5ZkGrVH5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "AF3 comparison"
+      ],
+      "metadata": {
+        "id": "PcTVfMo5toMJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import zipfile\n",
+        "\n",
+        "# Upload multiple AF3 zip files\n",
+        "uploaded_af3 = files.upload()\n",
+        "\n",
+        "for af3_zip in uploaded_af3.keys():\n",
+        "    af3_extract_path = f\"/content/{af3_zip.replace('.zip', '')}\"\n",
+        "    os.makedirs(af3_extract_path, exist_ok=True)\n",
+        "\n",
+        "    with zipfile.ZipFile(af3_zip, 'r') as zip_ref:\n",
+        "        zip_ref.extractall(af3_extract_path)\n",
+        "\n",
+        "    print(f\"✅ Extracted AlphaFold 3 results to {af3_extract_path}\")\n",
+        "\n",
+        "    # Load AF3 confidence scores\n",
+        "    af3_confidence_file = f\"{af3_extract_path}/confidence.json\"\n",
+        "\n",
+        "    try:\n",
+        "        with open(af3_confidence_file, \"r\") as f:\n",
+        "            af3_data = json.load(f)\n",
+        "            print(f\"📊 Confidence Scores for {af3_zip}:\")\n",
+        "            print(json.dumps(af3_data, indent=4))\n",
+        "\n",
+        "        # Load and plot AF3 pLDDT\n",
+        "        af3_plddt_file = f\"{af3_extract_path}/plddt.npz\"\n",
+        "        af3_plddt = np.load(af3_plddt_file)[\"plddt\"]\n",
+        "\n",
+        "        plt.figure(figsize=(10, 5))\n",
+        "        plt.plot(af3_plddt, label=f\"AF3 pLDDT Scores - {af3_zip}\", color=\"green\")\n",
+        "        plt.xlabel(\"Residue Index\")\n",
+        "        plt.ylabel(\"pLDDT Score\")\n",
+        "        plt.title(f\"AlphaFold 3 pLDDT Score for {af3_zip}\")\n",
+        "        plt.legend()\n",
+        "        plt.show()\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"❌ AlphaFold 3 confidence scores not found for {af3_zip}. Check if the zip file is correct.\")\n"
+      ],
+      "metadata": {
+        "id": "9zpktGFptqMj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Compare AF3 Vs Boltz-1"
+      ],
+      "metadata": {
+        "id": "J5yI4yVit5qu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "# Loop through each predicted structure\n",
+        "for pred_dir in prediction_dirs:\n",
+        "    try:\n",
+        "        # Load Boltz-1 data\n",
+        "        confidence_file = f\"{results_path}/{pred_dir}/predictions/{pred_dir}/confidence_{pred_dir}_model_0.json\"\n",
+        "        with open(confidence_file, \"r\") as f:\n",
+        "            boltz_data = json.load(f)\n",
+        "\n",
+        "        boltz_ptm = boltz_data[\"ptm\"]\n",
+        "        boltz_iptm = boltz_data[\"iptm\"]\n",
+        "        boltz_plddt_file = f\"{results_path}/{pred_dir}/predictions/{pred_dir}/plddt_{pred_dir}_model_0.npz\"\n",
+        "        boltz_plddt = np.load(boltz_plddt_file)[\"plddt\"]\n",
+        "\n",
+        "        # Find matching AF3 result\n",
+        "        af3_extract_path = f\"/content/{pred_dir}_af3\"\n",
+        "        af3_confidence_file = f\"{af3_extract_path}/confidence.json\"\n",
+        "        with open(af3_confidence_file, \"r\") as f:\n",
+        "            af3_data = json.load(f)\n",
+        "\n",
+        "        af3_ptm = af3_data[\"ptm\"]\n",
+        "        af3_iptm = af3_data[\"iptm\"]\n",
+        "        af3_plddt_file = f\"{af3_extract_path}/plddt.npz\"\n",
+        "        af3_plddt = np.load(af3_plddt_file)[\"plddt\"]\n",
+        "\n",
+        "        # Create a comparison dataframe\n",
+        "        comparison_df = pd.DataFrame({\n",
+        "            \"Residue Index\": list(range(len(boltz_plddt))),\n",
+        "            \"Boltz-1 pLDDT\": boltz_plddt,\n",
+        "            \"AF3 pLDDT\": af3_plddt[:len(boltz_plddt)]\n",
+        "        })\n",
+        "\n",
+        "        # Print summary stats\n",
+        "        print(f\"🔬 Comparison for {pred_dir}:\")\n",
+        "        print(f\"Boltz-1 PTM: {boltz_ptm}, iPTM: {boltz_iptm}\")\n",
+        "        print(f\"AF3 PTM: {af3_ptm}, iPTM: {af3_iptm}\")\n",
+        "\n",
+        "        # Plot pLDDT Comparison\n",
+        "        plt.figure(figsize=(10, 5))\n",
+        "        plt.plot(comparison_df[\"Residue Index\"], comparison_df[\"Boltz-1 pLDDT\"], label=\"Boltz-1\", color=\"blue\")\n",
+        "        plt.plot(comparison_df[\"Residue Index\"], comparison_df[\"AF3 pLDDT\"], label=\"AlphaFold 3\", color=\"green\")\n",
+        "        plt.xlabel(\"Residue Index\")\n",
+        "        plt.ylabel(\"pLDDT Score\")\n",
+        "        plt.title(f\"Boltz-1 vs AlphaFold 3: pLDDT Scores for {pred_dir}\")\n",
+        "        plt.legend()\n",
+        "        plt.show()\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"❌ Could not compare {pred_dir}. Missing files.\")\n"
+      ],
+      "metadata": {
+        "id": "NXKiR38Gt1Fp"
       },
       "execution_count": null,
       "outputs": []
