--- a/Boltz1.ipynb
+++ b/Boltz1.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "machine_shape": "hm",
       "gpuType": "T4",
       "include_colab_link": true
     },
@@ -14,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "AcYvVeDESi2a"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1295,11 +1295,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "4eXNO1JJHYrB",
-        "outputId": "c2744f1e-32b9-42bc-898a-8ea0e0b85cb7",
+        "outputId": "db2b0d52-99c8-407a-ad9d-1be46ffa9576",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1310,8 +1310,8 @@
           "name": "stdout",
           "text": [
             "installing colabfold...\n",
-            "CPU times: user 665 ms, sys: 122 ms, total: 787 ms\n",
-            "Wall time: 3min 37s\n"
+            "CPU times: user 805 ms, sys: 142 ms, total: 947 ms\n",
+            "Wall time: 4min 46s\n"
           ]
         }
       ],
@@ -1339,47 +1339,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "!pip show boltz\n"
-      ],
-      "metadata": {
-        "id": "LgsKiv1-YVJt",
-        "outputId": "c7e2a204-e53c-477f-96bc-29d7c6023dd7",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Name: boltz\n",
-            "Version: 0.4.1\n",
-            "Summary: Boltz-1\n",
-            "Home-page: \n",
-            "Author: \n",
-            "Author-email: \n",
-            "License: \n",
-            "Location: /usr/local/lib/python3.11/dist-packages\n",
-            "Requires: biopython, click, dm-tree, einops, einx, fairscale, hydra-core, mashumaro, modelcif, numpy, pandas, pytorch-lightning, pyyaml, rdkit, requests, scipy, torch, types-requests, wandb\n",
-            "Required-by: \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "dZfgjZdvZBSE"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "This uploads the YAML, moves it to the \"examples\" folder, and runs Boltz-1 automatically."
@@ -1405,20 +1364,20 @@
         "\n",
         "# Move file to the examples folder\n",
         "shutil.move(filename, dest_path)\n",
-        "print(f\"✅ Moved {filename} to {dest_path}\")\n",
+        "print(f\"Moved {filename} to {dest_path}\")\n",
         "\n",
         "# Run Boltz-1 prediction\n",
         "!boltz predict {dest_path} --accelerator gpu --use_msa_server"
       ],
       "metadata": {
         "id": "QiW_8qlWq-ai",
-        "outputId": "580e8fe6-a09b-43f5-8d2d-3027fc608d81",
+        "outputId": "f46cb788-fd35-45f4-ca42-d6261283c3da",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 377
+          "height": 817
         }
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1428,9 +1387,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-359470cd-1350-40f2-84f0-c48cdab27daa\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-6be19afb-3151-40df-9942-a7f3ba95f075\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-359470cd-1350-40f2-84f0-c48cdab27daa\">\n",
+              "     <output id=\"result-6be19afb-3151-40df-9942-a7f3ba95f075\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -1615,18 +1574,50 @@
           "metadata": {}
         },
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-0953e1458ad5>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# Upload YAML file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0muploaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muploaded\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mdest_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"/content/boltz/examples/{filename}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36mupload\u001b[0;34m(target_dir)\u001b[0m\n\u001b[1;32m     70\u001b[0m   \"\"\"\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m   \u001b[0muploaded_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_upload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmultiple\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m   \u001b[0;31m# Mapping from original filename to filename as saved locally.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m   \u001b[0mlocal_filenames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/google/colab/files.py\u001b[0m in \u001b[0;36m_upload_files\u001b[0;34m(multiple)\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    163\u001b[0m   \u001b[0;31m# First result is always an indication that the file picker has completed.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 164\u001b[0;31m   result = _output.eval_js(\n\u001b[0m\u001b[1;32m    165\u001b[0m       'google.colab._files._uploadFiles(\"{input_id}\", \"{output_id}\")'.format(\n\u001b[1;32m    166\u001b[0m           \u001b[0minput_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minput_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/google/colab/output/_js.py\u001b[0m in \u001b[0;36meval_js\u001b[0;34m(script, ignore_result, timeout_sec)\u001b[0m\n\u001b[1;32m     38\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mignore_result\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0m_message\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     94\u001b[0m     \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_next_input_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_NOT_READY\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.025\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     97\u001b[0m       \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     if (\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving prot_ptp1b_test2.yaml to prot_ptp1b_test2.yaml\n",
+            "Moved prot_ptp1b_test2.yaml to /content/boltz/examples/prot_ptp1b_test2.yaml\n",
+            "Checking input data.\n",
+            "Running predictions for 1 structure\n",
+            "Processing input data.\n",
+            "Found a manifest file at output directory: boltz_results_prot_ptp1b_test2\n",
+            "All examples in data are processed. Updating the manifest\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/boltz\", line 8, in <module>\n",
+            "    sys.exit(cli())\n",
+            "             ^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1157, in __call__\n",
+            "    return self.main(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1078, in main\n",
+            "    rv = self.invoke(ctx)\n",
+            "         ^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1688, in invoke\n",
+            "    return _process_result(sub_ctx.command.invoke(sub_ctx))\n",
+            "                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 1434, in invoke\n",
+            "    return ctx.invoke(self.callback, **ctx.params)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/click/core.py\", line 783, in invoke\n",
+            "    return __callback(*args, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/boltz/main.py\", line 669, in predict\n",
+            "    trainer = Trainer(\n",
+            "              ^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pytorch_lightning/utilities/argparse.py\", line 70, in insert_env_defaults\n",
+            "    return fn(self, **kwargs)\n",
+            "           ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pytorch_lightning/trainer/trainer.py\", line 395, in __init__\n",
+            "    self._accelerator_connector = _AcceleratorConnector(\n",
+            "                                  ^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pytorch_lightning/trainer/connectors/accelerator_connector.py\", line 143, in __init__\n",
+            "    self._accelerator_flag = self._choose_gpu_accelerator_backend()\n",
+            "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/pytorch_lightning/trainer/connectors/accelerator_connector.py\", line 353, in _choose_gpu_accelerator_backend\n",
+            "    raise MisconfigurationException(\"No supported gpu backend found!\")\n",
+            "lightning_fabric.utilities.exceptions.MisconfigurationException: No supported gpu backend found!\n"
           ]
         }
       ]
@@ -1655,13 +1646,13 @@
         "# Check if results directory exists\n",
         "if os.path.exists(results_dir):\n",
         "    shutil.make_archive(zip_path.replace(\".zip\", \"\"), 'zip', results_dir)\n",
-        "    print(f\"✅ Results zipped to {zip_path}\")\n",
+        "    print(f\"Results zipped to {zip_path}\")\n",
         "\n",
         "    # Download the zip file\n",
         "    files.download(zip_path)\n",
-        "    print(\"📥 Download started...\")\n",
+        "    print(\"Download started...\")\n",
         "else:\n",
-        "    print(\"❌ No results found! Check if Boltz-1 ran successfully.\")\n"
+        "    print(\"No results found, Check if Boltz-1 ran successfully.\")\n"
       ],
       "metadata": {
         "id": "KJtXXxGtrKfo"
@@ -1693,9 +1684,9 @@
         "prediction_dirs = [d for d in os.listdir(results_path) if os.path.isdir(os.path.join(results_path, d))]\n",
         "\n",
         "if not prediction_dirs:\n",
-        "    print(\"❌ No prediction results found. Please run Boltz-1 first.\")\n",
+        "    print(\" No prediction results found. Please run Boltz-1 first.\")\n",
         "else:\n",
-        "    print(\"📂 Available Predictions:\")\n",
+        "    print(\" Available Predictions:\")\n",
         "    for i, pred_dir in enumerate(prediction_dirs):\n",
         "        print(f\"{i + 1}. {pred_dir}\")\n",
         "\n",
@@ -1712,7 +1703,7 @@
         "\n",
         "        with open(confidence_file, \"r\") as f:\n",
         "            data = json.load(f)\n",
-        "            print(f\"\\n📊 Confidence Scores for {selected_pred}:\")\n",
+        "            print(f\"\\n Confidence Scores for {selected_pred}:\")\n",
         "            print(json.dumps(data, indent=4))\n",
         "\n",
         "        # Load and plot pLDDT scores\n",
@@ -1728,7 +1719,7 @@
         "        plt.show()\n",
         "\n",
         "    except (ValueError, FileNotFoundError) as e:\n",
-        "        print(f\"❌ Error: {e}. Please check the available predictions and try again.\")\n"
+        "        print(f\"Error: {e}. Please check the available predictions\")\n"
       ],
       "metadata": {
         "id": "kuUQ5ZkGrVH5"
@@ -1760,7 +1751,7 @@
         "    with zipfile.ZipFile(af3_zip, 'r') as zip_ref:\n",
         "        zip_ref.extractall(af3_extract_path)\n",
         "\n",
-        "    print(f\"✅ Extracted AlphaFold 3 results to {af3_extract_path}\")\n",
+        "    print(f\" Extracted AlphaFold 3 results to {af3_extract_path}\")\n",
         "\n",
         "    # Load AF3 confidence scores\n",
         "    af3_confidence_file = f\"{af3_extract_path}/confidence.json\"\n",
@@ -1768,7 +1759,7 @@
         "    try:\n",
         "        with open(af3_confidence_file, \"r\") as f:\n",
         "            af3_data = json.load(f)\n",
-        "            print(f\"📊 Confidence Scores for {af3_zip}:\")\n",
+        "            print(f\" Confidence Scores for {af3_zip}:\")\n",
         "            print(json.dumps(af3_data, indent=4))\n",
         "\n",
         "        # Load and plot AF3 pLDDT\n",
@@ -1783,7 +1774,7 @@
         "        plt.legend()\n",
         "        plt.show()\n",
         "    except FileNotFoundError:\n",
-        "        print(f\"❌ AlphaFold 3 confidence scores not found for {af3_zip}. Check if the zip file is correct.\")\n"
+        "        print(f\" AlphaFold 3 confidence scores not found for {af3_zip}. Check if the zip file is correct.\")\n"
       ],
       "metadata": {
         "id": "9zpktGFptqMj"
@@ -1837,7 +1828,7 @@
         "        })\n",
         "\n",
         "        # Print summary stats\n",
-        "        print(f\"🔬 Comparison for {pred_dir}:\")\n",
+        "        print(f\"Comparison for {pred_dir}:\")\n",
         "        print(f\"Boltz-1 PTM: {boltz_ptm}, iPTM: {boltz_iptm}\")\n",
         "        print(f\"AF3 PTM: {af3_ptm}, iPTM: {af3_iptm}\")\n",
         "\n",
@@ -1851,7 +1842,7 @@
         "        plt.legend()\n",
         "        plt.show()\n",
         "    except FileNotFoundError:\n",
-        "        print(f\"❌ Could not compare {pred_dir}. Missing files.\")\n"
+        "        print(f\" Could not compare {pred_dir}. Missing files.\")\n"
       ],
       "metadata": {
         "id": "NXKiR38Gt1Fp"
